--- a/sdknfklansdlfnaosdbgoiadotablelist.html
+++ b/sdknfklansdlfnaosdbgoiadotablelist.html
@@ -626,6 +626,7 @@ AAEAAAAOAIAAAwBgR0RFRi2dLXEAAAHQAAAAkkdQT1MxkgqDAABC+AAAPxxHU1VC9N7TyQAAFMAAAAoE
             return;
           }
           allRows = json.data;
+          console.log("📦 ข้อมูลที่ได้จาก API:", allRows[0]); // ดูตัวอย่างแถวแรก
           // สร้างหัวตารางจาก key ของ object แรก
           const keys = Object.keys(allRows[0]);
           theadRow.innerHTML = "";
@@ -663,7 +664,12 @@ AAEAAAAOAIAAAwBgR0RFRi2dLXEAAAHQAAAAkkdQT1MxkgqDAABC+AAAPxxHU1VC9N7TyQAAFMAAAAoE
           let dateMatch = true;
           if (selectedDateFilter) {
             const rawDate = (row["วันที่เก็บเอกสาร"] || "").trim();
-            dateMatch = rawDate === selectedDateFilter;
+            // แปลง selectedDateFilter จาก "YYYY-MM-DD" เป็น "DD/MM/YYYY"
+            const [year, month, day] = selectedDateFilter.split("-");
+            const formattedDate = `${day}/${month}/${year}`;
+            
+            console.log("🔍 เปรียบเทียบ:", rawDate, "กับ", formattedDate);
+            dateMatch = rawDate === formattedDate;
           }
           // 2. กรองตามคำค้นหา
           let searchMatch = true;
