--- a/sdknfklansdlfnaosdbgoiadotablelist.html
+++ b/sdknfklansdlfnaosdbgoiadotablelist.html
@@ -316,10 +316,12 @@
       table {
         border-collapse: collapse;
         width: 100%;
-        min-width: 2200px;
+        min-width: 5200px;
         font-size: 14px;
         color: var(--text);
         border: 1px solid var(--border);
+        table-layout: fixed;
+        th:nth-child(14) { width: 250px; }
       }
 
       thead th {
@@ -378,8 +380,10 @@
         border: 1px solid var(--border);
         padding: 10px 14px;
         text-align: left;
-        white-space: nowrap;
-        vertical-align: middle;
+        white-space: normal;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        vertical-align: top;
         background-color: var(--white);
       }
 
