--- a/scan.html
+++ b/scan.html
@@ -38,31 +38,52 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 20px;
-        padding-bottom: 100px;
+        padding: 5px;
+        padding-bottom: 70px;
+        overflow: hidden;
       }
 
       .scan-container {
         max-width: 480px;
         width: 100%;
         background: #fff;
-        padding: 20px;
+        padding: 10px;
         border-radius: 18px;
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-        border-top: 8px solid var(--primary);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        border-top: 6px solid var(--primary);
         text-align: center;
-        margin-top: 20px;
+        margin-top: 2px;
+        position: relative;
+        transition: border 0.3s ease;
+      }
+
+      .scan-container.success-border {
+        border: 4px solid var(--success) !important;
+        border-top: 6px solid var(--success) !important;
+      }
+
+      #mini-loader {
+        display: none;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 10;
+      }
+
+      .spin {
+        animation: spin 1s linear infinite;
       }
 
       h2 {
         color: var(--primary);
-        margin-bottom: 10px;
+        margin-bottom: 2px;
+        font-size: 1.1rem;
       }
 
       .scan-desc {
-        font-size: 14px;
+        font-size: 12px;
         color: var(--text-light);
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
 
       #reader {
@@ -209,14 +230,22 @@
       </div>
     </div>
 
-    <div class="scan-container">
+    <div class="scan-container" id="main-container">
+      <div id="mini-loader">
+        <i
+          data-feather="loader"
+          class="spin"
+          style="width: 24px; height: 24px; color: var(--success)"
+        ></i>
+      </div>
       <i
         data-feather="maximize"
+        id="header-icon"
         style="
-          width: 40px;
-          height: 40px;
+          width: 32px;
+          height: 32px;
           color: var(--primary);
-          margin-bottom: 10px;
+          margin-bottom: 5px;
         "
       ></i>
       <h2>สแกน QR Code</h2>
@@ -224,8 +253,8 @@
 
       <div id="reader"></div>
 
-      <div id="result-container" class="result-success">
-        <strong>สแกนสำเร็จ:</strong> <span id="scan-result"></span>
+      <div id="result-container" class="result-success" style="display: none">
+        <span id="scan-result"></span>
       </div>
     </div>
 
@@ -286,6 +315,14 @@
           if (orderId) {
             isScanning = false; // หยุดสแกนชั่วคราว
 
+            // ✅ แสดง UI สำเร็จแบบไม่มีข้อความ
+            document
+              .getElementById("main-container")
+              .classList.add("success-border");
+            document.getElementById("mini-loader").style.display = "block";
+            document.getElementById("header-icon").style.color =
+              "var(--success)";
+
             // ✅ ดึงข้อมูลพนักงานจาก localStorage
             const userData = JSON.parse(
               localStorage.getItem("tn_employee_user") || "{}"
@@ -306,6 +343,11 @@
               console.log("Auto-update success:", response);
               delete window[callbackName];
               document.body.removeChild(script);
+
+              // เมื่อ API สำเร็จ พากลับไปหน้าอัปเดต
+              setTimeout(() => {
+                window.location.href = `update-status.html?order=${orderId}`;
+              }, 500);
             };
 
             const script = document.createElement("script");
@@ -315,33 +357,20 @@
             script.onerror = function () {
               console.error("Auto-update failed");
               delete window[callbackName];
+              window.location.href = `update-status.html?order=${orderId}`;
             };
             document.body.appendChild(script);
-
-            resultSpan.innerHTML = `Order: <strong>${orderId}</strong>`;
-            // สร้างปุ่มลิงก์แบบ Relative
-            const updateUrl = `update-status.html?order=${orderId}`;
-            const btnHtml = `<a href="${updateUrl}" class="order-link-btn">อัปเดตงาน</a>`;
-
-            // แทรกปุ่มต่อท้าย resultSpan ถ้ายังไม่มี
-            resultContainer.innerHTML = `<span id="scan-result">Order: <strong>${orderId}</strong></span> ${btnHtml}`;
-            resultContainer.style.display = "flex";
 
             // สั่นเบาๆ (ถ้าอุปกรณ์รองรับ)
             if (navigator.vibrate) {
               navigator.vibrate(100);
             }
-
-            // หน่วงเวลา 2 วินาทีค่อยให้สแกนใหม่ได้
-            setTimeout(() => {
-              isScanning = true;
-            }, 2000);
           }
         };
 
         const config = {
           fps: 10,
-          qrbox: { width: 250, height: 250 },
+          qrbox: { width: 220, height: 220 },
           aspectRatio: 1.0,
         };
 
