--- a/sdknfklansdlfnaosdbgoiadotablelist.html
+++ b/sdknfklansdlfnaosdbgoiadotablelist.html
@@ -854,7 +854,11 @@ AAEAAAAOAIAAAwBgR0RFRi2dLXEAAAHQAAAAkkdQT1MxkgqDAABC+AAAPxxHU1VC9N7TyQAAFMAAAAoE
         if (qrDataURL && side === "left") {
           const qrSize = 30; // ✅ กลับมาขนาด 30 ตามที่ต้องการ
           const qrX = x + FORM_WIDTH - qrSize + 5; // ✅ ขยับไปทางขวาเพิ่มขึ้น (จากเดิมไม่บวกเพิ่ม)
-          const qrY = startY - 12; // ✅ ตำแหน่ง Y เดิมที่ดูดี
+          const qrY = startY - 8; // ✅ เลื่อนลงมาหน่อย (จาก -12 เป็น -8)
+
+          // ✅ เพิ่มพื้นหลังสีขาว
+          doc.setFillColor(255, 255, 255); // สีขาว
+          doc.rect(qrX, qrY, qrSize, qrSize, "F"); // วาดสี่เหลี่ยมสีขาว
 
           doc.addImage(qrDataURL, "PNG", qrX, qrY, qrSize, qrSize);
 
