--- a/customer_workorder.html
+++ b/customer_workorder.html
@@ -224,6 +224,77 @@
     .btn-back-top:hover {
       background: #3b82f6;
     }
+
+    /* ✅ Modal สำหรับแจ้งระบบปิดทำการ */
+    .modal-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 9999;
+      align-items: center;
+      justify-content: center;
+      backdrop-filter: blur(4px);
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .modal-content {
+      background: var(--white);
+      padding: 35px 30px;
+      border-radius: 20px;
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+      animation: modalScale 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    @keyframes modalScale {
+      from { transform: scale(0.85); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    .modal-icon {
+      font-size: 56px;
+      margin-bottom: 20px;
+    }
+
+    .modal-content h2 {
+      color: var(--primary);
+      margin-top: 0;
+      margin-bottom: 12px;
+      font-size: 24px;
+      font-weight: 700;
+    }
+
+    .modal-content p {
+      color: #4b5563;
+      line-height: 1.6;
+      margin-bottom: 30px;
+      font-size: 16px;
+    }
+
+    .modal-content button {
+      background: var(--primary);
+      color: white;
+      border: none;
+      padding: 14px 40px;
+      border-radius: 12px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      width: auto;
+      transition: all 0.2s ease;
+    }
+
+    .modal-content button:hover {
+      background: var(--primary-light);
+      transform: translateY(-1px);
+    }
   </style>
 </head>
 
@@ -437,8 +508,32 @@
     /****************************************************
      * 5) SUBMIT FORM AND SAVE ORDER DATA
      ****************************************************/
+    function isSystemClosed() {
+        const now = new Date();
+        const hours = now.getHours();
+        const minutes = now.getMinutes();
+        // ปิดทำการเวลา 20:30 น.
+        return (hours > 20 || (hours === 20 && minutes >= 30));
+    }
+
+    function showClosedModal() {
+        const modal = document.getElementById("closedModal");
+        if (modal) modal.style.display = "flex";
+    }
+
+    function closeModal() {
+        const modal = document.getElementById("closedModal");
+        if (modal) modal.style.display = "none";
+    }
+
     document.getElementById("jobForm").addEventListener("submit", async (e) => {
         e.preventDefault();
+
+        // ตรวจสอบเวลาทำการ (20:30 น. ไทย)
+        if (isSystemClosed()) {
+            showClosedModal();
+            return;
+        }
 
         const f = e.target;
         const d = Object.fromEntries(new FormData(f).entries());
@@ -803,6 +898,17 @@
     loadProjectList();
     loadDocumentsList();
   </script>
+
+  <!-- Modal สำหรับแจ้งระบบปิดทำการ -->
+  <div id="closedModal" class="modal-overlay">
+    <div class="modal-content">
+      <div class="modal-icon">🕒</div>
+      <h2>ระบบปิดทำการ</h2>
+      <p>ขณะนี้อยู่นอกเวลาทำการ<br>ระบบเปิดให้สั่งงานได้จนถึงเวลา <strong>20:30 น.</strong></p>
+      <button onclick="closeModal()">ตกลง</button>
+    </div>
+  </div>
+
 </body>
 
 </html>
